--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
         <div class="outer">
         <div class="centered inputs">
-            <input id="num1" type="text" size=41px placeholder="Первая цифра">
-            <select name="operation" id="operation">
+            <input id="num1" type="text" placeholder="Первая цифра">
+            <select class="operation" name="operation" id="operation">
                 <option value="+">+</option>
                 <option value="-">-</option>
                 <option value="*">*</option>
                 <option value="/">/</option>
             </select>
-            <input id="num2" type="text" size=41px placeholder="Вторая цифра">
+            <input id="num2" type="text" placeholder="Вторая цифра">
         </div>
         <div class="centered">
             <button type="button" id="convert">Решить</button>
